# Research_Paper_Analyzer

./: README.md
API/: .gitignore  app.py  chat_memory.db-shm  chat_memory.db-wal  main.py  pyproject.toml
API/DB/: mongo.py
API/agents/: chat_with_paper.py  prompts.py  research_agent.py  states.py  structured_output.py  tools.py
API/prompts/: prompts.py
API/services/: ChatMemory.py
API/vectorstore/: retriever.py
FRONTEND/: package-lock.json  package.json  tsconfig.json
FRONTEND/src/: App.jsx
FRONTEND/src/api/: api.js  api.ts
FRONTEND/src/components/: Analyze.jsx  Analyze.tsx  Chat.jsx  Chat.tsx  SideBar.tsx  Upload.jsx  Upload.tsx
FRONTEND/src/pages/: MainApp.jsx  MainApp.tsx
