[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.8",
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.136.1",
    "langchain>=1.2.16",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.27",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
